unpackaged/main/default/objects/AccountContactRelation/fields/Email_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Email_Notifications__c</fullName>
    <label>Email Notifications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Cases (Crisis &amp; Non-Crisis)</fullName>
            </value>
            <value>
                <fullName>Only Crisis Cases</fullName>
            </value>
            <value>
                <fullName>Non-Crisis Cases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>