unpackaged/main/default/objects/AccountContactRelation/fields/Only_Crises_Emails__c.field-meta.xml
<CustomField>
    <fullName>Only_Crises_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only Crises Emails</label>
    <type>Checkbox</type>
</CustomField>