unpackaged/main/default/objects/AccountContactRelation/fields/Property_Email__c.field-meta.xml
<CustomField>
    <fullName>Property_Email__c</fullName>
    <description>Email ID Associated to the contact for the property</description>
    <formula>Contact.Email</formula>
    <label>Property Email</label>
    <type>Text</type>
</CustomField>