unpackaged/main/default/objects/AccountContactRelation/fields/Web_Reason__c.field-meta.xml
<CustomField>
    <fullName>Web_Reason__c</fullName>
    <label>Web Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dining</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Public Relations</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Public Relations &amp; Advertising</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>