unpackaged/main/default/objects/AccountContactRelation/validationRules/Account_and_Contact_must_be_have_same_Re.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_and_Contact_must_be_have_same_Re</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
(Account.RecordType.DeveloperName = &#39;Franchise_Managed_Account&#39; &amp;&amp;  Contact.RecordType.DeveloperName = &#39;Customer_Guest&#39;),

(Account.RecordType.DeveloperName = &#39;Customer_Guest_Account&#39; &amp;&amp;  Contact.RecordType.DeveloperName = &#39;Franchise_Managed_Property_Employee&#39;))</errorConditionFormula>
    <errorMessage>Account and Contact must be have same Record Type.</errorMessage>
</ValidationRule>